syntax = "proto3";

package prometheus_proxy.v1;

option go_package = "spitikos/api/prometheusproxy/v1";

message Value {
  int64 timestamp = 1;
  double value = 2;
}

message Sample {
  map<string, string> metric = 1;
  Value value = 2;
}

message SampleStream {
  map<string, string> metric = 1;
  repeated Value values = 2;
}
